# HorizonOS

./: .gitignore  AI_IMPLEMENTATION_COMPLETE.md  CHECKLIST_AI_INTEGRATION.md  CLAUDE.md  GRAPH_DESKTOP_PROGRESS.md  README.md  README_AI.md  RELEASE_NOTES.md  STATUS.md  build-iso-instructions.md  check-dev-env.sh  docker-compose.yml  kotlin-dsl-implementation-progress.md  test-iso.sh  test-kotlin-dsl.sh  validate-iso.sh
src/desktop/: BUILD_REPORT.md  Cargo.toml  demo.sh  quick-test.sh  run-compositor.sh  test-compositor.sh  test-graph-concepts.sh  test-graph-desktop.sh  test-graph-safe.sh
src/desktop/assets/fonts/: README.md
src/desktop/config/: graph-desktop.toml
src/desktop/config/themes/: cyberpunk.toml
src/desktop/graph-accessibility/: Cargo.toml
src/desktop/graph-accessibility/src/: at_spi.rs  contrast.rs  keyboard_nav.rs  lib.rs  magnification.rs  screen_reader.rs  spatial_audio.rs  voice_commands.rs
src/desktop/graph-ai/: Cargo.toml
src/desktop/graph-ai/src/: agents.rs  hardware.rs  lib.rs  ollama.rs  patterns.rs  services.rs  suggestions.rs
src/desktop/graph-ai/src/agents/: communication.rs  coordinator.rs  decomposition.rs  langchain.rs  memory.rs  mod.rs
src/desktop/graph-ai/src/automation/: browser.rs  mod.rs  n8n.rs  scheduler.rs  ui.rs  workflows.rs
src/desktop/graph-ai/src/monitoring/: event_monitor.rs  idle_detector.rs  mod.rs  privacy_filter.rs  resource_monitor.rs
src/desktop/graph-ai/src/patterns/: mod.rs
src/desktop/graph-ai/src/privacy/: anonymization.rs  audit.rs  consent.rs  encryption.rs  mod.rs
src/desktop/graph-ai/src/storage/: cache.rs  config.rs  mod.rs  timescale.rs
src/desktop/graph-ai/src/suggestions/: mod.rs
src/desktop/graph-bridge/: Cargo.toml
src/desktop/graph-bridge/src/: app_grid.rs  app_grid_broken.rs  fallback.rs  file_manager.rs  lib.rs  migration.rs  window_bridge.rs
src/desktop/graph-clustering/: Cargo.toml
src/desktop/graph-clustering/src/: algorithms.rs  boundaries.rs  cluster.rs  lib.rs  manager.rs  suggestions.rs
src/desktop/graph-compositor/: Cargo.toml
src/desktop/graph-compositor/src/: backend.rs  backend.rs.old  compositor.rs  compositor.rs.old  input.rs  input.rs.old  lib.rs  main.rs  output.rs  output.rs.old  protocols.rs  protocols.rs.old  render.rs  state.rs  state.rs.old  window.rs  window.rs.old  window_manager.rs  xwayland.rs
src/desktop/graph-config/: Cargo.toml
src/desktop/graph-config/examples/: kotlin_dsl_integration.rs  test_config.rs
src/desktop/graph-config/src/: kotlindsl.rs  lib.rs  loader.rs  theme.rs  validation.rs  watcher.rs
src/desktop/graph-demo/: Cargo.toml
src/desktop/graph-demo/src/: main.rs
src/desktop/graph-edges/: Cargo.toml
src/desktop/graph-edges/src/: discovery.rs  lib.rs  manager.rs  relationship.rs
src/desktop/graph-engine/: Cargo.toml
src/desktop/graph-engine/examples/: basic_graph.rs
src/desktop/graph-engine/src/: camera.rs  error.rs  lib.rs  physics.rs  scene.rs
src/desktop/graph-engine/src/layout/: circular.rs  force_directed.rs  hierarchical.rs  mod.rs  multi_threaded.rs
src/desktop/graph-engine/src/renderer/: edge_content.rs  lod.rs  mod.rs  pipelines.rs  primitives.rs  shaders.rs
src/desktop/graph-engine/src/shaders/: edge_analysis.wgsl
src/desktop/graph-integration/: Cargo.toml
src/desktop/graph-integration/src/: lib.rs
src/desktop/graph-interaction/: Cargo.toml
src/desktop/graph-interaction/src/: advanced.rs  camera_controls.rs  context_menu.rs  drag_drop.rs  gestures.rs  input.rs  lib.rs  selection.rs
src/desktop/graph-layout/: Cargo.toml
src/desktop/graph-layout/src/: circular.rs  cluster.rs  force_directed.rs  grid.rs  hierarchical.rs  lib.rs  manager.rs  temporal.rs
src/desktop/graph-nodes/: Cargo.toml
src/desktop/graph-nodes/src/: ai_agent.rs  application.rs  automation.rs  concept.rs  config_group.rs  device.rs  file.rs  lib.rs  manager.rs  person.rs  setting.rs  system.rs  task.rs  url.rs
src/desktop/graph-notifications/: Cargo.toml
src/desktop/graph-notifications/src/: actions.rs  channels.rs  filters.rs  handler.rs  history.rs  lib.rs  manager.rs  renderer.rs  types.rs
src/desktop/graph-performance/: Cargo.toml
src/desktop/graph-performance/src/: adaptive.rs  cache.rs  culling.rs  instancing.rs  lib.rs  lod.rs  memory.rs  metrics.rs
src/desktop/graph-system/: Cargo.toml
src/desktop/graph-system/src/: dbus.rs  lib.rs  media.rs  monitors.rs  power.rs  tray.rs
src/desktop/graph-visual/: Cargo.toml
src/desktop/graph-visual/src/: effects.rs  icons.rs  lib.rs  theme.rs  thumbnails.rs
src/desktop/graph-visual/tests/: comprehensive_tests.rs
src/desktop/graph-workspaces/: Cargo.toml
src/desktop/graph-workspaces/src/: collaboration.rs  layout.rs  lib.rs  persistence.rs  rules.rs  templates.rs
src/desktop/graph-workspaces/tests/: collaboration_tests.rs
src/desktop/hyprland/: README.md  install.sh  packages.list
src/desktop/hyprland/configs/: appearance.conf  binds.conf  exec.conf  hyprland.conf  rules.conf
src/desktop/hyprland/configs/macos/: appearance.conf  binds.conf  exec.conf  hyprland.conf  rules.conf
src/desktop/hyprland/configs/windows11/: appearance.conf  binds.conf  exec.conf  hyprland.conf  rules.conf
src/desktop/hyprland/scripts/: install-configs.sh  mode-indicator.sh  screenshot.sh  switch-mode.sh
src/desktop/hyprland/services/: hyprland-session.service  waybar.service  xdg-desktop-portal-hyprland.service
src/desktop/hyprland/themes/breeze-dark/: gtk-settings.ini  theme.conf
src/desktop/hyprland/waybar/: config-kde.json  style-kde.css
src/desktop/hyprland/waybar/macos/: dock.css  dock.json  menubar.css  menubar.json
src/desktop/hyprland/waybar/windows11/: config.json  style.css
src/desktop/hyprland/wofi/: config  style.css
src/desktop/hyprland/wofi/macos/: config  style.css
src/desktop/hyprland/wofi/windows11/: config  (+1 more)
src/desktop/tests/: ai_system_integration.rs  comprehensive_integration_runner.rs  graph_engine_integration.rs  integration_test.rs  integration_tests.rs  mod.rs  multi_component_integration.rs  performance_tests.rs  stress_tests.rs
(+342 files in other folders)
