[workspace]
resolver = "2"
members = [
    "graph-engine",
    "graph-nodes", 
    "graph-edges",
    "graph-layout",
    "graph-interaction",
    "graph-ai",
    "graph-workspaces",
    "graph-integration",
    "graph-config",
    "graph-bridge"
]

[workspace.dependencies]
# Core graphics and rendering
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"

# Math and physics
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-glm = "0.18"
rapier3d = "0.17"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UI and windowing
egui = "0.24"
egui-wgpu = "0.24"
egui-winit = "0.24"

# System integration
dbus = "0.9"
wayland-client = "0.31"
wayland-protocols = "0.31"

# AI integration
reqwest = { version = "0.11", features = ["json"] }
ollama-rs = "0.1"

# Performance and profiling
criterion = "0.5"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

# Data serialization and memory
bytemuck = { version = "1.14", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.12"