[package]
name = "horizonos-graph-accessibility"
version = "0.1.0"
edition = "2021"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
horizonos-graph-nodes = { path = "../graph-nodes" }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }