[package]
name = "horizonos-graph-ai"
version = "0.1.0"
edition = "2021"
description = "AI integration layer for HorizonOS graph desktop"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
horizonos-graph-nodes = { path = "../graph-nodes" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
regex = "1.10"
base64 = "0.21"

# AI/LLM specific
ollama-rs = "0.1"
langchain-rust = "4.6"

# System monitoring
sysinfo = "0.30"

# Other dependencies
uuid = { version = "1.5", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"