[package]
name = "horizonos-graph-config"
version = "0.1.0"
edition = "2021"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
toml = "0.8"
serde_json = { workspace = true }
serde_yaml = "0.9"
notify = "6.1"
chrono = { workspace = true }
dirs = "5.0"

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.8"
