[package]
name = "horizonos-graph-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
horizonos-graph-nodes = { path = "../graph-nodes" }
horizonos-graph-layout = { path = "../graph-layout" }
winit = "0.29"
wgpu = "0.19"
cgmath = "0.18"
env_logger = "0.11"