[package]
name = "horizonos-graph-edges"
version = "0.1.0"
edition = "2021"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
horizonos-graph-nodes = { path = "../graph-nodes" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
