[package]
name = "horizonos-graph-nodes"
version = "0.1.0"
edition = "2021"
description = "Node system for HorizonOS graph desktop"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.8"