[package]
name = "horizonos-graph-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
horizonos-graph-nodes = { path = "../graph-nodes" }
serde = { workspace = true }
nalgebra = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }