[package]
name = "horizonos-graph-workspaces"
version = "0.1.0"
edition = "2021"

[dependencies]
horizonos-graph-engine = { path = "../graph-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
chrono = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
uuid = { version = "1.5", features = ["v4", "serde"] }
dirs = "5.0"
